<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_action_home"
        android:icon="@drawable/baseline_home_black_24"
        android:title="@string/bottom_home_text" />
    <item
        android:id="@+id/bottom_action_search"
        android:icon="@drawable/baseline_search_black_24"
        android:title="@string/bottom_search_text" />
    <item
        android:id="@+id/bottom_action_add"
        android:icon="@drawable/baseline_add_box_black_24"
        android:title="@string/Bottom_AddEvent_Text" />
    <item
        android:id="@+id/bottom_action_notification"
        android:icon="@drawable/baseline_notifications_none_black_24"
        android:title="@string/bottom_notification_text" />
    <item
        android:id="@+id/bottom_action_myaccount"
        android:icon="@drawable/baseline_person_outline_black_24"
        android:title="@string/bottom_account_text" />
</menu>